@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.7 2007/07/16 20:18:58 njoly Exp $
-
-SHA1 (vlp4510e.tar.Z) = 05c991ed9c5e9d517b1e672e07ac7a44d36e0dd7
-RMD160 (vlp4510e.tar.Z) = fe3a10939782119f7fe094b3201015a5cb9d7051
-Size (vlp4510e.tar.Z) = 13465139 bytes
